fix: text overflow table element (#1932)

--- a/packages/elements/src/styles/components/table.scss
+++ b/packages/elements/src/styles/components/table.scss
@@ -7,6 +7,7 @@
   & td {
     word-break: normal;
     max-width: 300px;
+    overflow-wrap: break-word;
   }
   tr {
     &.is-expanded {
